# Skaia

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
cmake/: DefaultCXX.cmake
examples/: README.md  example1.cpp
extras/engine_py/: example.py  setup.py
extras/engine_py/skaia/: __init__.py  components.py  core.py  events.py  systems.py  ui.py  utils.py
libs/editor/: CMakeLists.txt
libs/editor/docs/: README.md
libs/editor/src/: main.cpp
libs/engine/: CMakeLists.txt
libs/engine/docs/: README.md
libs/engine/src/: Core.h  Debug.cpp  Debug.h  GameApplication.cpp  GameApplication.h  Input.cpp  Input.h  SkaiaCore.h  SkaiaImaging.cpp  SkaiaImaging.h  Types.h  Window.cpp  Window.h
libs/engine/src/behaviors/: SkaiaImaging.cpp  SkaiaImaging.h  SkaiaTimer.cpp  SkaiaTimer.h  SkaiaUI.cpp
libs/engine/src/components/: AudioSource.h  Canvas.h  Collider.h  Debug.h  Hierarchy.h  Input.h  Map.h  Rigidbody.h  Sprite.h  Transform.h  Window.h
libs/engine/src/modules/: SkaiaAudio.cpp  SkaiaAudio.h  SkaiaEvents.cpp  SkaiaEvents.h  SkaiaIO.cpp  SkaiaIO.h  SkaiaImaging.cpp  SkaiaImaging.h  SkaiaTimer.cpp  SkaiaTimer.h  SkaiaUI.cpp  SkaiaUI.h
libs/engine/src/systems/: AudioSystem.cpp  AudioSystem.h  CollisionSystem.cpp  CollisionSystem.h  DebugSystem.cpp  DebugSystem.h  InputSystem.cpp  InputSystem.h  MapSystem.cpp  MapSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  WindowSystem.cpp  WindowSystem.h
libs/ght/: CMakeLists.txt
tools/: copyrighter.sh
